general app refactor attempt almost done
